Center Now Playing waveform and ensure reset-seed truncates DB

--- a/css/styles.css
+++ b/css/styles.css
@@ -1762,10 +1762,11 @@ img {
 
  .sonic-waves {
    position: absolute;
-   left: 0;
-   bottom: 0;
-   width: 100%;
-   height: 40%;
+   top: 50%;
+   left: 50%;
+   width: 200px;
+   height: 80px;
+   transform: translate(-50%, -50%);
    z-index: 3;
    opacity: 1;
    pointer-events: none;
@@ -1774,10 +1775,11 @@ img {
 
  .sonic-wave-canvas {
    position: absolute;
-   left: 0;
-   bottom: 0;
-   width: 100%;
-   height: 40%;
+   top: 50%;
+   left: 50%;
+   width: 200px;
+   height: 80px;
+   transform: translate(-50%, -50%);
    z-index: 3;
    opacity: 1;
    pointer-events: none;
